<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">ダンジョンに出会いを求めるのは間違っているだろうか</string>
    <string name="yellow_star">Yello Star</string>
    <string name="bio_text">大森のデビュー作で、小説投稿サイト「Arcadia」に投稿されていた『ダンジョンに出会いを求めるのは間違っているだろうか』を『ファミリア・ミィス』に改題し投稿。第4回GA文庫大賞大賞を受賞した[1]のち、タイトルを戻して書籍化したものである（小説投稿サイトの作品ページは削除済）。

        第3回ラノベ好き書店員大賞第1位[2]。2018年10月にはアニメ公式Twitterでシリーズ累計発行部数1000万部突破の告知をしている[3]。2016年3月には第2回SUGOI JAPAN Awardでラノベ部門1位を獲得した[4]。

        2014年1月からアイズ・ヴァレンシュタインを主人公にした外伝の『ダンジョンに出会いを求めるのは間違っているだろうか外伝 ソード・オラトリア』（ダンジョンにであいをもとめるのはまちがっているだろうか がいでん ソード・オラトリア）が刊行されている。イラストははいむらきよたかが担当。

        2013年に本編、2014年に外伝の漫画版が連載開始された。

        2015年にはテレビアニメ版が放送された。第1話の放送後にはヒロイン・ヘスティアの一風変わった服装（乳房の下を通し、二の腕、背中を結ぶ青いリボン[5]によって上腕を動かすと連動して乳房が上下に揺れる[6]）がインターネット上で「例の紐」[6][注 1]と呼ばれるなど話題を集め、イギリスのタブロイド紙『デイリー・メール』がヘスティアを画像付きで紹介するなど、反響は日本国外にも広がった[8][9][6]。このブームについて、テレビアニメ版のプロデューサー中山信宏は「本編が放送されてからの盛り上がり」であり、「アニメスタッフの映像化時のこだわりのおかげ」と述べている[7]。「例の紐/紐神様」は、2015年度アニメ流行語大賞銀賞（第2位）を受賞した[10]。

        2016年1月からリュー・リオンを主人公にした外伝小説『ダンジョンに出会いを求めるのは間違っているだろうかリュー外伝 グラン・カジノをぶっつぶせ！』（ダンジョンにであいをもとめるのはまちがっているだろうか リューがいでん グラン・カジノをぶっつぶせ）がガンガンONLINEにて2016年1月21日更新分から同年6月16日更新分まで月一ペースで連載した。2017年3月に『ダンジョンに出会いを求めるのは間違っているだろうか ファミリアクロニクル episodeリュー』のタイトルで文庫本化。漫画版の連載も開始。さらにはこの作品を、本編や外伝では掘り起こしきれないキャラクターたちの過去に触れていく新たな外伝シリーズ、『クロニクル』シリーズの第1作に位置付けすることになった。

        2017年4月から7月にかけては、外伝『ソード・オラトリア』のテレビアニメが放送された。

        2018年には原作者書き下ろし脚本による劇場版とアニメ本編第2期の製作が発表[11]。翌2019年2月15日に『劇場版 ダンジョンに出会いを求めるのは間違っているだろうか -オリオンの矢-』が公開され、同年7月より『ダンジョンに出会いを求めるのは間違っているだろうかII』が放送予定[12]。
        \n\n出典: フリー百科事典『ウィキペディア（Wikipedia）』
    </string>
    <string name="what_is_your_nickname">what is your nickname</string>
    <string name="done">Done</string>
</resources>
