<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            style="@style/NameStyle"/>


    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image"
            android:contentDescription="@string/yellow_star"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences|textAutoCorrect"
            android:text=""
            android:ems="10"
            android:hint="@string/what_is_your_nickname"
            android:textAlignment="center"
            style="@style/NameStyle"
            android:id="@+id/nickname_edit"
            android:imeOptions="actionSend"
    />
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
    />

    <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nickname_text"
            style="@style/NameStyle"
            android:background="@color/colorAccent"
            android:textAlignment="center"
            android:visibility="gone"
            android:padding="@dimen/small_padding"
    />

    <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent" style="@style/NameStyle">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/bio_text"
                    android:text="@string/bio_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lineSpacingMultiplier="1.2"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    style="@style/NameStyle"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>